--- a/Caculator/app/src/main/res/layout/main_ui.xml
+++ b/Caculator/app/src/main/res/layout/main_ui.xml
@@ -4,58 +4,131 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/showpan"
-        android:text="this is your input words"
+    <EditText
+        android:id="@+id/showpan4"
         android:layout_alignParentLeft="true"
         android:textSize="40sp"
         app:layout_widthPercent="100%"
-        app:layout_heightPercent="50%"
+        app:layout_heightPercent="10%"
+        />
+
+    <EditText
+        android:id="@+id/showpan3"
+        android:layout_below="@id/showpan4"
+        android:textSize="40sp"
+        app:layout_widthPercent="100%"
+        app:layout_heightPercent="10%"
+        />
+
+    <EditText
+        android:id="@+id/showpan2"
+        android:layout_below="@id/showpan3"
+        android:textSize="40sp"
+        app:layout_widthPercent="100%"
+        app:layout_heightPercent="10%"
+        />
+
+    <EditText
+        android:id="@+id/showpan1"
+        android:layout_below="@+id/showpan2"
+        android:textSize="30sp"
+        android:text="0"
+        android:textAlignment="textEnd"
+        app:layout_heightPercent="10%"
+        app:layout_widthPercent="100%" />
+
+
+    <Button
+        android:id="@+id/leftBracket"
+        android:text="("
+        android:textSize="20sp"
+        android:layout_below="@id/showpan1"
+        app:layout_widthPercent="20%"
+        app:layout_heightPercent="10%"
         />
 
     <Button
-        android:id="@+id/AC"
-        android:text="AC"
+        android:id="@+id/rightBracket"
+        android:text=")"
         android:textSize="20sp"
-        android:layout_below="@id/showpan"
+        android:layout_below="@id/showpan1"
+        android:layout_toRightOf="@id/leftBracket"
+        app:layout_widthPercent="20%"
+        app:layout_heightPercent="10%"
+        />
+
+    <Button
+        android:id="@+id/sin"
+        android:text="sin"
+        android:textSize="20sp"
+        android:layout_below="@id/showpan1"
+        android:layout_toRightOf="@id/rightBracket"
+        app:layout_widthPercent="20%"
+        app:layout_heightPercent="10%"
+        />
+
+    <Button
+        android:id="@+id/cos"
+        android:text="cos"
+        android:textSize="20sp"
+        android:layout_below="@id/showpan1"
+        android:layout_toRightOf="@id/sin"
+        app:layout_widthPercent="20%"
+        app:layout_heightPercent="10%"
+        />
+
+    <Button
+        android:id="@+id/powerSym"
+        android:text="x^y"
+        android:textSize="20sp"
+        android:layout_below="@id/showpan1"
+        android:layout_toRightOf="@id/cos"
+        app:layout_widthPercent="20%"
+        app:layout_heightPercent="10%"
+        />
+
+    <Button
+        android:id="@+id/C"
+        android:text="C"
+        android:textSize="20sp"
+        android:layout_below="@id/leftBracket"
         app:layout_widthPercent="25%"
         app:layout_heightPercent="10%"
         />
 
     <Button
-        android:id="@+id/delete"
+        android:id="@+id/Delete"
         android:text="Del"
         android:textSize="20sp"
-        android:layout_below="@id/showpan"
-        android:layout_toRightOf="@id/AC"
-        app:layout_widthPercent="25%"
+        android:layout_below="@id/leftBracket"
+        android:layout_toRightOf="@id/C"
         app:layout_heightPercent="10%"
-        />
-    <Button
-        android:id="@+id/divide"
-        android:text="÷"
-        android:textSize="20sp"
-        android:layout_below="@id/showpan"
-        android:layout_toRightOf="@id/delete"
-        app:layout_widthPercent="25%"
-        app:layout_heightPercent="10%"
-        />
+        app:layout_widthPercent="25%" />
 
     <Button
         android:id="@+id/mutiply"
-        android:text="×"
+        android:text="*"
         android:textSize="20sp"
-        android:layout_below="@id/showpan"
+        android:layout_below="@id/leftBracket"
         android:layout_toRightOf="@id/divide"
         app:layout_widthPercent="25%"
         app:layout_heightPercent="10%"
         />
 
     <Button
+        android:id="@+id/divide"
+        android:layout_below="@+id/sin"
+        android:layout_toEndOf="@+id/Delete"
+        android:text="/"
+        android:textSize="20sp"
+        app:layout_heightPercent="10%"
+        app:layout_widthPercent="25%" />
+
+    <Button
         android:id="@+id/seven"
         android:text="7"
         android:textSize="20sp"
-        android:layout_below="@id/AC"
+        android:layout_below="@id/C"
         app:layout_widthPercent="25%"
         app:layout_heightPercent="10%"
         />
@@ -64,7 +137,7 @@
         android:id="@+id/eight"
         android:text="8"
         android:textSize="20sp"
-        android:layout_below="@id/delete"
+        android:layout_below="@id/Delete"
         android:layout_toRightOf="@id/seven"
         app:layout_widthPercent="25%"
         app:layout_heightPercent="10%"
@@ -82,7 +155,7 @@
 
     <Button
         android:id="@+id/substract"
-        android:text="－"
+        android:text="-"
         android:textSize="20sp"
         android:layout_below="@id/mutiply"
         android:layout_toRightOf="@id/nine"
@@ -121,7 +194,7 @@
 
     <Button
         android:id="@+id/add"
-        android:text="＋"
+        android:text="+"
         android:textSize="20sp"
         android:layout_below="@id/substract"
         android:layout_toRightOf="@id/six"
@@ -129,15 +202,6 @@
         app:layout_heightPercent="10%"
         />
 
-    <Button
-        android:id="@+id/delete"
-        android:text="Del"
-        android:textSize="20sp"
-        android:layout_below="@id/showpan"
-        android:layout_toRightOf="@id/AC"
-        app:layout_widthPercent="25%"
-        app:layout_heightPercent="10%"
-        />
 
     <Button
         android:id="@+id/one"
@@ -170,7 +234,7 @@
 
     <Button
         android:id="@+id/equal"
-        android:text="＝"
+        android:text="="
         android:textSize="20sp"
         android:layout_below="@id/add"
         android:layout_toRightOf="@id/three"
@@ -180,7 +244,7 @@
 
     <Button
         android:id="@+id/percent"
-        android:text="％"
+        android:text="%"
         android:textSize="20sp"
         android:layout_below="@id/one"
         app:layout_widthPercent="25%"
@@ -206,14 +270,6 @@
         app:layout_widthPercent="25%"
         app:layout_heightPercent="10%"
         />
-
-
-
-
-
-
-
-
 
 
 
